fix(input-types-ltr): set email, tel, and url inputs to always use ltr alignment

--- a/ui/components/input/base/_index.scss
+++ b/ui/components/input/base/_index.scss
@@ -49,6 +49,16 @@
   }
 
   /**
+   * Prevents certain input types from switching to RTL layout.
+   */
+  &[type="url"],
+  &[type="tel"],
+  &[type="email"] {
+    direction: ltr;
+    text-align: left;
+  }
+
+  /**
    * Removes aesthetic nature from an input
    *
    * @selector .slds-input_bare
